page products added

--- a/frontend/products.html
+++ b/frontend/products.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="page_product"></div>
-    <script type="module" src="/src/products.js"></script>
+    <script type="module" src="/src/product.js"></script>
   </body>
 </html>
