create product page created

--- a/frontend/products/index.html
+++ b/frontend/products/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="page_product"></div>
-    <script type="module" src="/src/product.js"></script>
+    <script type="module" src="../src/js/products/index.js"></script>
   </body>
 </html>
